ConfigArray type, favorites tab UIm removed gtk-assets files.
config.c & config.h:
# Added new type: ConfigArray (char*).
# Renamed functions:
    # change_value_in_config => config_change_value
    # get_value_from_config => config_get_value
# Added new functions for new type:
    # char** config_array_parse(ConfigArray _config_array)
    # size_t config_array_get_length(ConfigArray _config_array)
    # ConfigArray config_array_add_item(ConfigArray config_array, char* _item, int where)
    # ConfigArray config_array_make(char* elements[], size_t num_entries)
    # ConfigArray config_array_remove_item(ConfigArray _config_array, int index)

string.c & string.h:
# Added new files.
# Added new functions:
    # char* string_remove_first_last_char(char* source)
    # char* string_make_config_string(const char* string)
    # char* string_replace_semicolons(char* source)

gtk-assets.c & gtk-assets.h:
# Files deleted.

CMakeLists.txt:

Signed-off-by: Dmitry Lyubimcev <dzone@danwin1210.de>
# Added executable for string.h & string.c; removed executable for gtk-assets.c & gtk-assets.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ add_executable(
         src/window.h
         src/path.c
         src/path.h
-        src/gtk-assets.c
-        src/gtk-assets.h)
+        src/string.h
+        src/string.c)
 target_link_libraries(samp-linux ${GTK4_LIBRARIES})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/cmake-build)
